<resources>
    <string name="app_name">Tìm kiếm trẻ em</string>
    <string name="map_api_key">AIzaSyDuDvfz2t2JngUJCd1H2rPGEuV9KW6O7kU</string>
    <string name="login">Login</string>
    <string name="enter_email">Email</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_valid_password">Enter valid password</string>
    <string name="enter_valid_mobile">Enter valid mobile number</string>
    <string name="network_error">No network connection.</string>
    <string name="errorString">Đã có lỗi sảy ra, xin vui lòng thử lại.</string>

    <string name="cat_textfield_password" translatable="false">Mật khẩu</string>
    <string name="cat_textfield_email" translatable="false">Email</string>

    <string name="required_email_error" translatable="false">Email bắt buộc nhập</string>
    <string name="valid_email_error" translatable="false">Email không đúng định dạng</string>
    <string name="required_password_error" translatable="false">Mật khẩu bắt buộc nhập</string>
    <string name="process">Đang xử lý...</string>

    <string name="cat_login" translatable="false">Đăng nhập</string>
    <string name="cat_gen_password" translatable="false">Tạo mật khẩu kết nối</string>

    <string name="cat_bottom_nav_page_1_name">Page 1</string>
    <string name="cat_bottom_nav_page_2_name">Page 2</string>
    <string name="cat_bottom_nav_page_3_name">Page 3</string>
    <string name="cat_bottom_nav_page_4_name">Page 4</string>
    <string name="cat_bottom_nav_page_5_name">Page 5</string>

    <string name="cat_bottom_nav_alarm">Alarm</string>
    <string name="cat_bottom_nav_clock">Clock</string>
    <string name="cat_bottom_nav_timer">Timer</string>
    <string name="cat_bottom_nav_stopwatch">Stopwatch</string>

    <string name="cat_transition_fade_through_title">Fade Through</string>
    <string name="cat_transition_fade_through_menu_item_albums">Ds.Trẻ em</string>
    <string name="action_mapDetail">Chi tiết</string>
    <string name="action_addChildren">Thêm trẻ</string>

    <string name="cat_transition_fade_through_menu_item_photos">QL.Địa điểm</string>
    <string name="cat_transition_fade_through_menu_item_search">Thiết lập</string>
    <string name="cat_transition_fade_through_photo_count">123 photos</string>

    <string name="cat_transition_image_content_desc">Sample header image</string>
    <string name="cat_card_rich_media_image_view_description">Card Image</string>
    <string name="cat_card_rich_media_view_title">Title goes here</string>
    <string name="cat_card_rich_media_action_1">Xem chi tiết vị trí</string>
    <string name="newChild">newChild</string>
    <string name="childList">childList</string>
</resources>
