<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:layout_margin="@dimen/cat_textfield_standard_spacing"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtShowEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#e83e8c"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="Hãy nhập địa chỉ email để nhận mật khẩu đăng nhập qua email" />

    <TextView
        android:id="@+id/txtShowPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#e83e8c"
        android:visibility="gone"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="Hãy nhập mật khẩu" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/cat_textfield_email"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperText="@string/required_email_error"
        app:helperTextEnabled="true"

        android:inputType="textEmailAddress"
        app:placeholderText="@string/cat_textfield_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:maxLength="254"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passWord_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/cat_textfield_password"
        android:visibility="gone"
        app:errorEnabled="true"
        app:helperText="@string/required_password_error"
        app:helperTextEnabled="true"
        app:placeholderText="@string/cat_textfield_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="4"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/cat_textfield_standard_spacing"
            android:text="@string/cat_login" />

        <Button
            android:id="@+id/reEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nhập lại email" />
    </LinearLayout>

</LinearLayout>